sys/lv2/ui/ui.h


typedef void* LV2UI_Widget;
typedef void* LV2UI_Handle;
typedef void* LV2UI_Controller;
typedef void* LV2UI_Feature_Handle;
typedef void (*LV2UI_Write_Function)(LV2UI_Controller controller,
                                     uint32_t         port_index,
                                     uint32_t         buffer_size,
                                     uint32_t         port_protocol,
                                     const void*      buffer);
typedef struct LV2UI_Descriptor {
	const char* URI;
	LV2UI_Handle (*instantiate)(const struct LV2UI_Descriptor* descriptor,
	                            const char*                    plugin_uri,
	                            const char*                    bundle_path,
	                            LV2UI_Write_Function           write_function,
	                            LV2UI_Controller               controller,
	                            LV2UI_Widget*                  widget,
	                            const LV2_Feature* const*      features);
	void (*cleanup)(LV2UI_Handle ui);
	void (*port_event)(LV2UI_Handle ui,
	                   uint32_t     port_index,
	                   uint32_t     buffer_size,
	                   uint32_t     format,
	                   const void*  buffer);
	const void* (*extension_data)(const char* uri);
} LV2UI_Descriptor;
LV2_SYMBOL_EXPORT
const LV2UI_Descriptor* lv2ui_descriptor(uint32_t index);