sys/src/state.h

#define LV2_STATE__freePath          LV2_STATE_PREFIX "freePath"           
#define LV2_STATE__makePath          LV2_STATE_PREFIX "makePath"           
#define LV2_STATE__mapPath           LV2_STATE_PREFIX "mapPath"            
typedef void* LV2_State_Handle;            
typedef void* LV2_State_Free_Path_Handle;  
typedef void* LV2_State_Map_Path_Handle;   
typedef void* LV2_State_Make_Path_Handle;  
typedef enum {
	LV2_STATE_SUCCESS         = 0,  
	LV2_STATE_ERR_UNKNOWN     = 1,  
	LV2_STATE_ERR_BAD_TYPE    = 2,  
	LV2_STATE_ERR_BAD_FLAGS   = 3,  
	LV2_STATE_ERR_NO_FEATURE  = 4,  
	LV2_STATE_ERR_NO_PROPERTY = 5,  
	LV2_STATE_ERR_NO_SPACE    = 6   
} LV2_State_Status;
typedef LV2_State_Status (*LV2_State_Store_Function)(
	LV2_State_Handle handle,
	uint32_t         key,
	const void*      value,
	size_t           size,
	uint32_t         type,
	uint32_t         flags);
typedef const void* (*LV2_State_Retrieve_Function)(
	LV2_State_Handle handle,
	uint32_t         key,
	size_t*          size,
	uint32_t*        type,
	uint32_t*        flags);
typedef struct _LV2_State_Interface {
	LV2_State_Status (*save)(LV2_Handle                 instance,
	                         LV2_State_Store_Function   store,
	                         LV2_State_Handle           handle,
	                         uint32_t                   flags,
	                         const LV2_Feature *const * features);
	LV2_State_Status (*restore)(LV2_Handle                  instance,
	                            LV2_State_Retrieve_Function retrieve,
	                            LV2_State_Handle            handle,
	                            uint32_t                    flags,
	                            const LV2_Feature *const *  features);
} LV2_State_Interface;
typedef struct {
	LV2_State_Map_Path_Handle handle;
	char* (*abstract_path)(LV2_State_Map_Path_Handle handle,
	                       const char*               absolute_path);
	char* (*absolute_path)(LV2_State_Map_Path_Handle handle,
	                       const char*               abstract_path);
} LV2_State_Map_Path;
typedef struct {
	LV2_State_Make_Path_Handle handle;
	char* (*path)(LV2_State_Make_Path_Handle handle,
	              const char*                path);
} LV2_State_Make_Path;
typedef struct {
	LV2_State_Free_Path_Handle handle;
	void (*free_path)(LV2_State_Free_Path_Handle handle,
	                  char*                      path);
} LV2_State_Free_Path;