sys/src/linux/aarch64.rs

#[doc = "Feature data for state:mapPath (@ref LV2_STATE__mapPath)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_State_Map_Path {
    #[doc = "Opaque host data."]
    pub handle: LV2_State_Map_Path_Handle,
    #[doc = "Map an absolute path to an abstract path for use in plugin state."]
    #[doc = "@param handle MUST be the `handle` member of this struct."]
    #[doc = "@param absolute_path The absolute path of a file."]
    #[doc = "@return An abstract path suitable for use in plugin state."]
    #[doc = ""]
    #[doc = "The plugin MUST use this function to map any paths that will be stored"]
    #[doc = "in plugin state.  The returned value is an abstract path which MAY not"]
    #[doc = "be an actual file system path; absolute_path() MUST be used to map"]
    #[doc = "it to an actual path in order to use the file."]
    #[doc = ""]
    #[doc = "Plugins MUST NOT make any assumptions about abstract paths except that"]
    #[doc = "they can be mapped back to the absolute path of the \"same\" file (though"]
    #[doc = "not necessarily the same original path) using absolute_path()."]
    #[doc = ""]
    #[doc = "This function may only be called within the context of"]
    #[doc = "LV2_State_Interface methods.  The caller must free the returned value"]
    #[doc = "with LV2_State_Free_Path.free_path()."]
    pub abstract_path: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2_State_Map_Path_Handle,
            absolute_path: *const ::std::os::raw::c_char,
        ) -> *mut ::std::os::raw::c_char,
    >,
    #[doc = "Map an abstract path from plugin state to an absolute path."]
    #[doc = "@param handle MUST be the `handle` member of this struct."]
    #[doc = "@param abstract_path An abstract path (typically from plugin state)."]
    #[doc = "@return An absolute file system path."]
    #[doc = ""]
    #[doc = "The plugin MUST use this function in order to actually open or otherwise"]
    #[doc = "use any paths loaded from plugin state."]
    #[doc = ""]
    #[doc = "This function may only be called within the context of"]
    #[doc = "LV2_State_Interface methods.  The caller must free the returned value"]
    #[doc = "with LV2_State_Free_Path.free_path()."]
    pub absolute_path: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2_State_Map_Path_Handle,
            abstract_path: *const ::std::os::raw::c_char,
        ) -> *mut ::std::os::raw::c_char,
    >,
}
#[doc = "Feature data for state:makePath (@ref LV2_STATE__makePath)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_State_Make_Path {
    #[doc = "Opaque host data."]
    pub handle: LV2_State_Make_Path_Handle,
    #[doc = "Return a path the plugin may use to create a new file."]
    #[doc = "@param handle MUST be the `handle` member of this struct."]
    #[doc = "@param path The path of the new file within a namespace unique to this"]
    #[doc = "plugin instance."]
    #[doc = "@return The absolute path to use for the new file."]
    #[doc = ""]
    #[doc = "This function can be used by plugins to create files and directories,"]
    #[doc = "either at state saving time (if this feature is passed to"]
    #[doc = "LV2_State_Interface.save()) or any time (if this feature is passed to"]
    #[doc = "LV2_Descriptor.instantiate())."]
    #[doc = ""]
    #[doc = "The host MUST do whatever is necessary for the plugin to be able to"]
    #[doc = "create a file at the returned path (for example, using fopen()),"]
    #[doc = "including creating any leading directories."]
    #[doc = ""]
    #[doc = "If this function is passed to LV2_Descriptor.instantiate(), it may be"]
    #[doc = "called from any non-realtime context.  If it is passed to"]
    #[doc = "LV2_State_Interface.save(), it may only be called within the dynamic"]
    #[doc = "scope of that function call."]
    #[doc = ""]
    #[doc = "The caller must free the returned value with"]
    #[doc = "LV2_State_Free_Path.free_path()."]
    pub path: ::std::option::Option<
        unsafe extern "C" fn(
            handle: LV2_State_Make_Path_Handle,
            path: *const ::std::os::raw::c_char,
        ) -> *mut ::std::os::raw::c_char,
    >,
}
#[doc = "Feature data for state:freePath (@ref LV2_STATE__freePath)."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2_State_Free_Path {
    #[doc = "Opaque host data."]
    pub handle: LV2_State_Free_Path_Handle,
    #[doc = "Free a path returned by a state feature."]
    #[doc = ""]
    #[doc = "@param handle MUST be the `handle` member of this struct."]
    #[doc = "@param path The path previously returned by a state feature."]
    #[doc = ""]
    #[doc = "This function can be used by plugins to free paths allocated by the host"]
    #[doc = "and returned by state features (LV2_State_Map_Path.abstract_path(),"]
    #[doc = "LV2_State_Map_Path.absolute_path(), and LV2_State_Make_Path.path())."]
    pub free_path: ::std::option::Option<
        unsafe extern "C" fn(handle: LV2_State_Free_Path_Handle, path: *mut ::std::os::raw::c_char),
    >,
}
#[doc = "A pointer to some widget or other type of UI handle."]
#[doc = ""]
#[doc = "The actual type is defined by the type of the UI."]
pub type LV2UI_Widget = *mut ::std::os::raw::c_void;
#[doc = "A pointer to UI instance internals."]
#[doc = ""]
#[doc = "The host may compare this to NULL, but otherwise MUST NOT interpret it."]
pub type LV2UI_Handle = *mut ::std::os::raw::c_void;
#[doc = "A pointer to a controller provided by the host."]
#[doc = ""]
#[doc = "The UI may compare this to NULL, but otherwise MUST NOT interpret it."]
pub type LV2UI_Controller = *mut ::std::os::raw::c_void;
#[doc = "A pointer to opaque data for a feature."]
pub type LV2UI_Feature_Handle = *mut ::std::os::raw::c_void;
#[doc = "A host-provided function that sends data to a plugin's input ports."]
#[doc = ""]
#[doc = "@param controller The opaque controller pointer passed to"]
#[doc = "LV2UI_Descriptor::instantiate()."]
#[doc = ""]
#[doc = "@param port_index Index of the port to update."]
#[doc = ""]
#[doc = "@param buffer Buffer containing `buffer_size` bytes of data."]
#[doc = ""]
#[doc = "@param buffer_size Size of `buffer` in bytes."]
#[doc = ""]
#[doc = "@param port_protocol Either 0 or the URID for a ui:PortProtocol.  If 0, the"]
#[doc = "protocol is implicitly ui:floatProtocol, the port MUST be an lv2:ControlPort"]
#[doc = "input, `buffer` MUST point to a single float value, and `buffer_size` MUST"]
#[doc = "be sizeof(float).  The UI SHOULD NOT use a protocol not supported by the"]
#[doc = "host, but the host MUST gracefully ignore any protocol it does not"]
#[doc = "understand."]
pub type LV2UI_Write_Function = ::std::option::Option<
    unsafe extern "C" fn(
        controller: LV2UI_Controller,
        port_index: u32,
        buffer_size: u32,
        port_protocol: u32,
        buffer: *const ::std::os::raw::c_void,
    ),
>;
#[doc = "A plugin UI."]
#[doc = ""]
#[doc = "A pointer to an object of this type is returned by the lv2ui_descriptor()"]
#[doc = "function."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct LV2UI_Descriptor {
    #[doc = "The URI for this UI (not for the plugin it controls)."]
    pub URI: *const ::std::os::raw::c_char,
    #[doc = "Create a new UI and return a handle to it.  This function works"]
    #[doc = "similarly to LV2_Descriptor::instantiate()."]
    #[doc = ""]
    #[doc = "@param descriptor The descriptor for the UI to instantiate."]
    #[doc = ""]
    #[doc = "@param plugin_uri The URI of the plugin that this UI will control."]
    #[doc = ""]
    #[doc = "@param bundle_path The path to the bundle containing this UI, including"]
    #[doc = "the trailing directory separator."]
    #[doc = ""]
    #[doc = "@param write_function A function that the UI can use to send data to the"]
    #[doc = "plugin's input ports."]
    #[doc = ""]
    #[doc = "@param controller A handle for the UI instance to be passed as the"]
    #[doc = "first parameter of UI methods."]
    #[doc = ""]
    #[doc = "@param widget (output) widget pointer.  The UI points this at its main"]
    #[doc = "widget, which has the type defined by the UI type in the data file."]
    #[doc = ""]
    #[doc = "@param features An array of LV2_Feature pointers.  The host must pass"]
    #[doc = "all feature URIs that it and the UI supports and any additional data, as"]
    #[doc = "in LV2_Descriptor::instantiate().  Note that UI features and plugin"]
    #[doc = "features are not necessarily the same."]
    #[doc = ""]
    pub instantiate: ::std::option::Option<
        unsafe extern "C" fn(
            descriptor: *const LV2UI_Descriptor,
            plugin_uri: *const ::std::os::raw::c_char,
            bundle_path: *const ::std::os::raw::c_char,
            write_function: LV2UI_Write_Function,
            controller: LV2UI_Controller,
            widget: *mut LV2UI_Widget,
            features: *const *const LV2_Feature,
        ) -> LV2UI_Handle,
    >,
    #[doc = "Destroy the UI.  The host must not try to access the widget after"]
    #[doc = "calling this function."]
    pub cleanup: ::std::option::Option<unsafe extern "C" fn(ui: LV2UI_Handle)>,
    #[doc = "Tell the UI that something interesting has happened at a plugin port."]
    #[doc = ""]
    #[doc = "What is \"interesting\" and how it is written to `buffer` is defined by"]
    #[doc = "`format`, which has the same meaning as in LV2UI_Write_Function()."]
    #[doc = "Format 0 is a special case for lv2:ControlPort, where this function"]
    #[doc = "should be called when the port value changes (but not necessarily for"]
    #[doc = "every change), `buffer_size` must be sizeof(float), and `buffer`"]
    #[doc = "points to a single IEEE-754 float."]
    #[doc = ""]
    #[doc = "By default, the host should only call this function for lv2:ControlPort"]
    #[doc = "inputs.  However, the UI can request updates for other ports statically"]
    #[doc = "with ui:portNotification or dynamicaly with ui:portSubscribe."]
    #[doc = ""]
    #[doc = "The UI MUST NOT retain any reference to `buffer` after this function"]
    #[doc = "returns, it is only valid for the duration of the call."]
    #[doc = ""]
    #[doc = "This member may be NULL if the UI is not interested in any port events."]
    pub port_event: ::std::option::Option<
        unsafe extern "C" fn(
            ui: LV2UI_Handle,
            port_index: u32,
            buffer_size: u32,
            format: u32,
            buffer: *const ::std::os::raw::c_void,
        ),
    >,
    #[doc = "Return a data structure associated with an extension URI, typically an"]
    #[doc = "interface struct with additional function pointers"]
    #[doc = ""]
    #[doc = "This member may be set to NULL if the UI is not interested in supporting"]
    #[doc = "any extensions. This is similar to LV2_Descriptor::extension_data()."]
    #[doc = ""]
    pub extension_data: ::std::option::Option<
        unsafe extern "C" fn(uri: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_void,
    >,
}
